[Ex-14] - Removed the CDN, imported react in App.js. But will throw error 'Browser scripts cannot have imports or exports'. Added browserslist

--- a/package.json
+++ b/package.json
@@ -17,6 +17,14 @@
   },
   "homepage": "https://github.com/sriram23/vanakkam-react#readme",
   "devDependencies": {
-    "parcel": "^2.10.0"
-  }
+    "parcel": "^2.10.0",
+    "process": "^0.11.10"
+  },
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
+  "browserlists": [
+    "last 2 versions"
+  ]
 }
